# polls

./: README.md  docker-compose.yml
backend/: .gitignore  .sample.env  Dockerfile  pyproject.toml  ruff.toml  run_celery.sh  run_celery_beat.sh  wait_for_db.py
backend/config/: celery.py  settings.py  urls.py
backend/src/: settings.py
backend/users/migrations/: 0001_initial.py
backend/voting/: admin.py  api.py  models.py  serializers.py  tasks.py  urls.py
backend/voting/migrations/: 0001_initial.py  0002_alter_choice_question_alter_question_published_date_and_more.py
frontend/: Dockerfile  package-lock.json  package.json
