[project]
name = "polls"
version = "0.1.0"
description = "Polls"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.6",
    "django-celery-beat>=2.8.1",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "psycopg>=3.2.10",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
